--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
+beautifulsoup4==4.9.3
+bs4==0.0.1
+certifi==2021.5.30
+charset-normalizer==2.0.4
+greenlet==1.1.1
+idna==3.2
+psycopg2-binary==2.9.1
+pydantic==1.8.2
+python-dotenv==0.19.0
 requests==2.26.0
+soupsieve==2.2.1
+SQLAlchemy==1.4.22
+typing-extensions==3.10.0.0
+urllib3==1.26.6
