--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,29 @@
+aiogram==2.14.3
+aiohttp==3.7.4.post0
+alembic==1.6.5
+async-timeout==3.0.1
+attrs==21.2.0
+Babel==2.9.1
 beautifulsoup4==4.9.3
 bs4==0.0.1
 certifi==2021.5.30
+chardet==4.0.0
 charset-normalizer==2.0.4
 greenlet==1.1.1
 idna==3.2
+Mako==1.1.4
+MarkupSafe==2.0.1
+multidict==5.1.0
 psycopg2-binary==2.9.1
 pydantic==1.8.2
+python-dateutil==2.8.2
 python-dotenv==0.19.0
+python-editor==1.0.4
+pytz==2021.1
 requests==2.26.0
+six==1.16.0
 soupsieve==2.2.1
 SQLAlchemy==1.4.22
 typing-extensions==3.10.0.0
 urllib3==1.26.6
+yarl==1.6.3
