--- a/sample.env
+++ b/sample.env
@@ -1,8 +1,8 @@
-TOKEN=1913816340:AAG9TVSMUhPq0PyqfGbKt0WV5ifX_wT4Ukk
+TOKEN=...
 DB_USER=db_user
 DB_USER_PASSWORD=qwerty
 POSTGRES_DB=postgres
 POSTGRES_SERVER=localhost:5432
-PERCENT_CHANGE=0.0001
+PERCENT_CHANGE=0.05
 
 API_V1_PREFIX=/api/v1
